[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enwts"
version = "1.0.0"
description = "ENWTS (Ethical Networking Tools) - GUI toolkit for authorized network testing and education."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Christian Huttunen" }]
license = { file = "LICENSE.txt" }

[project.urls]
Homepage = ""

[tool.setuptools]
packages = ["enwts"]

[project.scripts]
enwts = "enwts.app:run"
